--- a/sections/collection--collection-list.liquid
+++ b/sections/collection--collection-list.liquid
@@ -245,10 +245,10 @@
   
       
       
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/assets/owl.carousel.css" integrity="sha512-2H3RwXVyqhq8zP1FRBlZ6oBU4NkyLjXNbcnSGnEuxR1SDOrL0SSIMNCp+PbHTUn8RYLbhGiK/pW8Ih2btTf0ng==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/owl.carousel.min.js" integrity="sha512-lo4YgiwkxsVIJ5mex2b+VHUKlInSK2pFtkGFRzHsAL64/ZO5vaiCPmdGP3qZq1h9MzZzghrpDP336ScWugUMTg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<link rel="stylesheet" data-href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/assets/owl.carousel.css" />
+<script type="lazyload_int" data-src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/owl.carousel.min.js" ></script>
       
-     <script type="text/javascript">
+     <script type="lazyload_int">
    jQuery('.home-slider3').owlCarousel({
        loop:true,
        margin:40,
