--- a/sections/image--logo-list.liquid
+++ b/sections/image--logo-list.liquid
@@ -67,7 +67,7 @@
         </div>
     </div>
 </section>
-<script>
+<script type="lazyload_int">
    jQuery('.logo-slider').owlCarousel({
        loop:true,
        margin:0,
