--- a/sections/template--product.liquid
+++ b/sections/template--product.liquid
@@ -575,7 +575,7 @@
               
              <div class="text-para more-paymentt"><strong>More payment options</strong></div>
              
-              <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+              <script type="lazyload_int" data-src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
 <!--               <script>
               $(".more-paymentt").on("click", function() {
@@ -585,7 +585,7 @@
 
               </script> -->
               
-<script>
+<script type="lazyload_int" >
 $(".more-paymentt").on('click',function() {
     $('html, body').animate({
         'scrollTop' : $(".afterpay-paragraph").position().top
