--- a/sections/product-icon-tab.liquid
+++ b/sections/product-icon-tab.liquid
@@ -4,7 +4,7 @@
     {% for block in section.blocks %}
        <div class="col-md-3">
          <div class="p-ixon-div-ins">
-        <img class="iconeimg" src="{{ block.settings.icon_imagess | img_url:'master' }}">
+        <img class="iconeimg" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-class="LazyLoad" data-src="{{ block.settings.icon_imagess | img_url:'master' }}">
 
          <h5>{{block.settings.icon_title}}</h5>
          <p>{{block.settings.icon_subtitle}}</p>
@@ -56,9 +56,3 @@
 
   }
 {% endschema %}
-
-{% stylesheet %}
-{% endstylesheet %}
-
-{% javascript %}
-{% endjavascript %}
