--- a/snippets/sc-includes.liquid
+++ b/snippets/sc-includes.liquid
@@ -7,8 +7,8 @@ THIS IS A GENERATED ASSET OF INCLUDES FOR INSTALLED BOLD APPLICATIONS SO DO NOT 
 ---------------------------  WARNING  ---------------------------
 {%- endcomment -%}
 
-<script>
+<script type="lazyload_int">
     window.BOLD.common.cacheParams.options = 1700238257;
 </script>
-{{ 'bold-options.css' | asset_url | stylesheet_tag }}
-{{ 'https://option.boldapps.net/js/options.js' | script_tag }}
+<link rel="stylesheet" data-href="{{ 'bold-options.css' | asset_url }}">
+<script type="lazyload_int" data-src='https://option.boldapps.net/js/options.js'></script>
