--- a/snippets/starapps-core.liquid
+++ b/snippets/starapps-core.liquid
@@ -6,7 +6,7 @@
 <script type="application/json" sa-language-info="true" data-no-instant="true">{{ newline }}{"current_language":"{{ shop.locale | escape }}", "default_language":"{%- for locale in shop.published_locales -%}{%- if locale.primary -%}{{ locale.iso_code | escape }}{%- endif -%}{%- endfor -%}", "money_format":{{ shop.money_format | json }}}{{ newline }}</script>
 {% comment %} meta_information_end {% endcomment %}
     
-<script type="text/javascript" src="https://assets-cdn.starapps.studio/apps/vsk/the-neon-store-australia/script-33296-1640800448.js?shop={{shop.permanent_domain}}" async></script>
+<script type="lazyload_int" data-src="https://assets-cdn.starapps.studio/apps/vsk/the-neon-store-australia/script-33296-1640800448.js?shop={{shop.permanent_domain}}" ></script>
 
 
 <!-- VSK_PRE_APP_HIDE_CODE -->
@@ -15,7 +15,7 @@
     html:not(.nojs):not(.no-js) .swatch_options,html:not(.nojs):not(.no-js) form[action="/cart/add"] .product__variants,html:not(.nojs):not(.no-js) form[action="/cart/add"] .form__row div.selector-wrapper,html:not(.nojs):not(.no-js) form .swatch.clearfix{opacity:0;max-height:0}
 
 </style>
-<script type="text/javascript">
+<script type="lazyload_int">
 "use strict";
 // JS code added by StarApps Studio
 // It hides the default option selector so it's not visible in the frontend
