--- a/snippets/swatch.liquid
+++ b/snippets/swatch.liquid
@@ -99,7 +99,7 @@
                 tabindex="0"
               >
                 <span class="sr-only">{{ value }}</span>
-                <img class="crossed-out" src="{{ 'soldout_color.svg' | asset_url }}" alt="" />
+                <img class="crossed-out" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-class="LazyLoad" data-src="{{ 'soldout_color.svg' | asset_url }}" alt="" />
               </label>
             {% else %}
               <label class="{{ section.id }}-swatch-{{ option_index }}-{{ value | escape }}"
